--- a/src/html_src/style.css
+++ b/src/html_src/style.css
@@ -329,6 +329,36 @@ h1 {
     font-family: "Roboto", sans-serif;
     color: var(--text);
 }
+
+.monacoEditor {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    background-color: var(--bg-dark);
+}
+
+/* Monaco editor customizations */
+.monaco-editor .margin {
+    background-color: var(--bg-darker) !important;
+}
+
+.monaco-editor .view-line {
+    font-family:
+        "Consolas", "Fira Code", "JetBrains Mono", "Cascadia Code",
+        "Courier New", monospace !important;
+    font-feature-settings: "liga", "calt";
+    -webkit-font-feature-settings: "liga", "calt";
+    -moz-font-feature-settings: "liga", "calt";
+}
+
+.monaco-editor .current-line {
+    border: none !important;
+    background-color: var(--bg-darker) !important;
+}
 .saveSVG {
     fill: var(--secondary);
     position: absolute;
